# nitrocop

./: .gitignore  AGENTS.md  AGENTS.minimal.md  Cargo.toml  Dockerfile.agent  README.md  pyproject.toml
.codex/skills/: triage
.devcontainer/: devcontainer.json
.github/workflows/: agent-cop-fix-codex.yml  agent-cop-fix-minimax.yml  agent-cop-fix.yml  agent-cop-retry-codex.yml  agent-cop-retry.yml  agent-pr-repair.yml  batch-dispatch.yml  checks.yml  cop-issue-dispatch.yml  cop-issue-sync.yml  corpus-oracle.yml  investigate-regression.yml  release.yml
.kilocode/: setup-script
.kilocode/rules/: cop-fix.md
bench/: compare.rb
bench/corpus/: add_repos.py  baseline_rubocop.yml  clone_repos.sh  diagnose_corpus.py  diff_results.py  flipped_styles.yml  gen_repo_config.py  gen_tiers.py  manifest.jsonl  manifest_extended.jsonl  (+6 more)
docs/: IDEAS.md  KILO_AGENT_DISPATCH.md  PLAN.md  agent-ci.md  agent-dispatch-minimax.md  agent-dispatch.md  check-cop-issue.md  cop_coverage.md  corpus-workflow.md  corpus.md  corpus_extended.md  github-app.md  investigation-target-dir-relativization.md  self-hosted-runner.md
infra/: setup.md
scripts/: check-cop.py  check_cop.py  cop-coverage.py  corpus_download.py  corpus_smoke_test.py  dispatch-cops.py  dispatch_cops.py  investigate-regression.py  land-branch-commits.sh  list_include_gated_cops.py  reduce-mismatch.py  refresh_codex_auth.sh  stress-report.py  test_corpus_download.py  verify-cop-locations.py  verify_cop_locations.py
src/: cache.rs  cli.rs  fs.rs  lib.rs  linter.rs  main.rs  testutil.rs  verify.rs
tests/: integration.rs
(+1641 files in other folders)
