[package]
name = "nitrocop"
version = "0.0.1-pre2"
edition = "2024"
rust-version = "1.85"
default-run = "nitrocop"
description = "Experimental RuboCop rewrite in Rust — 900+ cops, drop-in compatible"
license = "MIT"
repository = "https://github.com/6/nitrocop"
readme = "README.md"
keywords = ["ruby", "linter", "rubocop", "lint"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "nitrocop"
path = "src/main.rs"

[[bin]]
name = "bench_nitrocop"
path = "bench/bench.rs"

[[bin]]
name = "node_pattern_codegen"
path = "src/bin/node_pattern_codegen.rs"

[dependencies]
ruby-prism = "1.7"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yml = "0.0.12"
rayon = "1.11"
ignore = "0.4"
globset = "0.4"
anyhow = "1.0"
sha2 = "0.10"
regex = "1"
fancy-regex = "0.14"

[dev-dependencies]
tempfile = "3"
proptest = "1"

[profile.release]
lto = "thin"
codegen-units = 16
strip = true

[profile.ci]
inherits = "release"
lto = "thin"
codegen-units = 16
strip = true
